--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --mode development"
+    "start": "webpack-dev-server --open --mode development",
+    "start:dev":"nodemon src/server/index.js --exact babel-node"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,12 @@
   },
   "homepage": "https://github.com/luisrdz5/mymediaplayer#readme",
   "dependencies": {
+    "@babel/register": "^7.6.2",
     "classnames": "^2.2.6",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
     "md5": "^2.2.1",
+    "nodemon": "^1.19.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
