--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "history": "^4.10.1",
     "md5": "^2.2.1",
     "nodemon": "^1.19.3",
     "prop-types": "^15.7.2",
@@ -32,6 +33,7 @@
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.14",
     "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4"
   },
