--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "history": "^4.10.1",
+    "ignore-styles": "^5.0.1",
     "md5": "^2.2.1",
     "nodemon": "^1.19.3",
     "prop-types": "^15.7.2",
@@ -34,8 +35,10 @@
     "react-hot-loader": "^4.12.14",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.0.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "webpack": "^4.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -61,7 +64,6 @@
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
-    "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.6.0",
     "webpack-hot-middleware": "^2.25.0"
