--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/luisrdz5/mymediaplayer#readme",
   "dependencies": {
     "@babel/register": "^7.6.2",
+    "asset-require-hook": "^1.2.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
