--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/luisrdz5/mymediaplayer#readme",
   "dependencies": {
     "@babel/register": "^7.6.2",
+    "asset-require-hook": "^1.2.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
@@ -30,20 +31,20 @@
     "md5": "^2.2.1",
     "nodemon": "^1.19.3",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-hot-loader": "^4.12.14",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "webpack": "^4.39.3"
+    "webpack": "^4.41.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
@@ -51,12 +52,12 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "css-loader": "^3.2.0",
-    "eslint": "^6.5.0",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.16.0",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -64,8 +65,8 @@
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.6.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
     "webpack-hot-middleware": "^2.25.0"
   }
 }
