--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.1",
     "history": "^4.10.1",
     "ignore-styles": "^5.0.1",
     "md5": "^2.2.1",
@@ -39,6 +40,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "terser-webpack-plugin": "^2.1.2",
     "webpack": "^4.41.0"
   },
   "devDependencies": {
