--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "sass-loader": "^8.0.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "^2.2.0"
   }
 }
