--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack-cli --config webpack.config.js --colors",
-    "start:prod": "node src/server/index.js",
-    "start:dev": "nodemon src/server/index.js --exact babel-node"
+    "start:prod": "NODE_ENV=production node src/server/index.js",
+    "start:dev": "DEBUG=express:*,app:* nodemon src/server/index.js --exact babel-node"
   },
   "repository": {
     "type": "git",
@@ -20,16 +20,28 @@
   },
   "homepage": "https://github.com/luisrdz5/mymediaplayer#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "@babel/register": "^7.6.2",
+    "@hapi/boom": "^7.4.2",
     "asset-require-hook": "^1.2.0",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "helmet": "^3.21.1",
     "history": "^4.10.1",
     "ignore-styles": "^5.0.1",
+    "lodash": "^4.17.11",
     "md5": "^2.2.1",
-    "nodemon": "^1.19.3",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-http": "^0.3.0",
+    "passport-linkedin-oauth2": "^2.0.0",
+    "passport-oauth": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -70,6 +82,8 @@
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-manifest-plugin": "^2.2.0",
+    "audit": "0.0.6",
+    "nodemon": "^1.19.1"
   }
 }
