--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "terser-webpack-plugin": "^2.1.2",
     "webpack": "^4.41.0"
   },
