--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack-cli --config webpack.config.js --colors",
-    "start:prod": "NODE_ENV=production node src/server/index.js",
-    "start:dev": "DEBUG=express:*,app:* nodemon src/server/index.js --exact babel-node"
+    "start:prod": "node src/server/index.js",
+    "start:dev": "nodemon src/server/index.js --exact babel-node"
   },
   "repository": {
     "type": "git",
