--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hapi/boom": "^7.4.2",
     "asset-require-hook": "^1.2.0",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
@@ -60,6 +61,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "audit": "0.0.6",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -78,13 +80,13 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
     "postcss-loader": "^3.0.0",
+    "qs": "^6.9.0",
     "sass-loader": "^8.0.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.2.0",
-    "audit": "0.0.6",
-    "nodemon": "^1.19.1"
+    "webpack-manifest-plugin": "^2.2.0"
   }
 }
