--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "build": "webpack-cli --config webpack.config.js --colors",
     "start:prod": "node src/server/index.js",
-    "start:dev": "nodemon src/server/index.js --exact babel-node"
+    "start:dev": "nodemon src/server/index.js --exact babel-node",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif)$": "<rootDir>/src/frontend/__mocks__/fileMock.js",
+      "\\.(scss|sass)$": "<rootDir>/src/frontend/__mocks__/styleMock.js"
+    }
   },
   "repository": {
     "type": "git",
@@ -64,11 +72,14 @@
     "audit": "0.0.6",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "compression-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-loader": "^3.0.2",
@@ -78,11 +89,13 @@
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "postcss-loader": "^3.0.0",
     "qs": "^6.9.0",
+    "react-test-renderer": "^16.11.0",
     "sass-loader": "^8.0.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
