--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:prod": "node src/server/index.js",
     "start:dev": "nodemon src/server/index.js --exact babel-node",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "jest": {
     "moduleNameMapper": {
@@ -96,6 +97,7 @@
     "postcss-loader": "^3.0.0",
     "qs": "^6.9.0",
     "react-test-renderer": "^16.11.0",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^8.0.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
