--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack-cli --config webpack.config.js --colors",
-    "start:prod": "node src/server/index.js",
+    "start": "node src/server/index.js",
     "start:dev": "nodemon src/server/index.js --exact babel-node",
     "test": "jest",
     "test:watch": "jest --watch",
